# fm-knowledge-service

./: .env.example  .gitignore  AGENT_TASK.md  Dockerfile  README.md  README_TEMPLATE.md  SERVICE_EXTRACTION_MAP.md  TASK.md  alembic.ini  docker-compose.yml  pyproject.toml  verify_compliance.py  verify_endpoints.py
.github/workflows/: ci.yml  docker-publish.yml  generate-docs.yml  sync-to-enterprise.yml
alembic/: env.py
alembic/versions/: 20250107_initial_schema.py
reference/: openapi.locked.yaml
reference/monolith/: knowledge.py
scripts/: generate_readme.py
src/knowledge_service/: __init__.py  main.py
src/knowledge_service/api/: __init__.py  dependencies.py
src/knowledge_service/api/routes/: __init__.py  documents.py  knowledge_endpoints.py  search.py
src/knowledge_service/config/: __init__.py  settings.py
src/knowledge_service/core/: __init__.py  analytics_manager.py  document_manager.py  job_manager.py  search_manager.py
src/knowledge_service/core/knowledge/: advanced_retrieval.py  ingestion.py
src/knowledge_service/infrastructure/database/: client.py  models.py
src/knowledge_service/infrastructure/knowledge/: __init__.py  runbook_kb.py
src/knowledge_service/infrastructure/vectordb/: __init__.py  chroma_local.py  chromadb_client.py  embeddings.py  factory.py  pinecone_provider.py  provider.py
src/knowledge_service/models/: __init__.py  document.py  requests.py
tests/unit/: test_health.py
